--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./assets/style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Riley Beach</title>
+</head>
+<body>
+    <header>
+        
+        <h1>
+            Riley Beach
+        </h1>
+        <h2>
+            Hello, my name is Riley Beach and I'm a 23 year old web developer from Anthem, Arizona.
+        </h2>
+        <nav>
+            <!--Unordered list element-->
+            <ul>
+                <li>
+                    <a href="#about-me"> About Me</a>
+                </li>
+                <li>
+                    <a href="#my-projects">My Projects</a>
+                </li>
+                <li>
+                    <a href="contact-me">Contact Me</a>
+                </li>
+            </ul>
 
+        </nav>
+    </header>
+
+    <!--hero-->
+    <section class="hero">
+        <div>
+            <img src="./assets/images/me.JPG">
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At iusto, rem autem sapiente quia velit cum labore expedita, dolorum doloremque vitae maiores facere. Rerum ipsa, fugit non tempora sit repellendus!
+        </p>
+    </section>
+
+    <!--My Projects-->
+    <section class="my-projects">
+
+    </section>
+
+</body>
+
+<footer>
+    &copy; 2020 Riley Beach.
+</footer>
+</html>
