starting the projects section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <!--hero-->
     <section class="hero">
         <div class="hero-cta">
-            <h2>Riley Beach</h2>
-            <p>Hello, my name is Riley and I make websites!</p>
+            <p>Hello, my name is Riley and I make websites.</p>
         </div>
     </section>
 
@@ -45,24 +44,104 @@
             <img src="./assets/images/me.JPG">
             </div>
             <p>
-                Pellentesque fermentum leo ac lacus tincidunt semper at sed augue. Sed quam lacus, vulputate non scelerisque et, vulputate nec risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut dui arcu, malesuada eget nisi placerat, rhoncus congue diam. Cras dolor arcu, lacinia non lacinia ac, cursus et est. Nunc auctor id purus vel tincidunt. Curabitur in est suscipit, lacinia ante ac, venenatis nisi. Fusce consequat augue sed feugiat pharetra. Praesent cursus, urna nec tempus posuere, dui ligula porta velit, in facilisis nunc mi rhoncus odio. Praesent ultrices auctor quam et imperdiet. Nullam non dignissim dui, non aliquet nibh. Curabitur feugiat quam dui, vitae mollis lorem feugiat eget. 
+                Hi, my name is Riley Beach and I am a 23 year old web developer from Anthem, Arizona. I graduated with a bachelors's degree in Marketing at Arizona State university. In my free time I love learning new coding languages, playing video games, or napping with my cat.      
             </p>
         </div>
     </section>
 
     <!--My Projects-->
     <section id="my-projects">
-        <div class ="projects-grid-container">
-            <div class="projects-grid-item run-buddy">
-                Run Buddy
-            </div>
-
-            <div class="projects-grid-item plant-guide">
-                Plant Pocket Guide
-            </div>
-
+        <div class ="flex-row">
+        <h2 class ="section-title primary border">
+            My Projects
+        </h2>
         </div>
-    </section>
+
+    <!--First Project-->
+
+        <div class="projects">
+        
+        <article class="project">
+        <div class="project image project-1">
+            <div>
+                <h3>Run Buddy</h3>
+            </div>
+        </div>
+            <div class="app-description">
+                <p>
+                    This is a website for training runner's.
+                </p>
+            </div>
+        </article>
+
+    <!--Second Project-->
+
+        <article class="project">
+            <div class="project image project-2">
+                <div>
+                    <h3>Horeison</h3>
+                </div>
+            </div>
+                <div class="app-description">
+                    <p>
+                        A website to help with search engine optimization.
+                    </p>
+                </div>
+            </article>
+
+            <article class="project">
+                <div class="project image project-3">
+                    <div>
+                        <h3>Plant Pocket Guide</h3>
+                    </div>
+                </div>
+                    <div class="app-description">
+                        <p>
+                            An app that lets you take a photo of your plant and get an exact care guide specific to your plant.
+                        </p>
+                    </div>
+            </article>
+
+            <article class="project">
+                    <div class="project image project-4">
+                        <div>
+                            <h3>WhatsCat</h3>
+                        </div>
+                    </div>
+                        <div class="app-description">
+                            <p>
+                                A messenger app the let's you communicate with your cat.
+                            </p>
+                        </div>
+            </article>
+
+            <article class="project">
+                        <div class="project image project-5">
+                            <div>
+                                <h3>What if it Was Purple?</h3>
+                            </div>
+                        </div>
+                            <div class="app-description">
+                                <p>
+                                    Have you ever looked at something and wondered what it would look like if it were purple? This is the perfect app for you.
+                                </p>
+                            </div>
+            </article>
+
+            <article class="project">
+                <div class="project image project-6">
+                    <div>
+                        <h3>Flavors of Love</h3>
+                    </div>
+                </div>
+                    <div class="app-description">
+                        <p>
+                            A website that pairs people for dates based on their favorite foods. Food lover's need love too.
+                        </p>
+                    </div>
+            </article>
+        </div>
+          
 
     <!--Contact Me-->
     <section id="contact-me">
