solid html layout and app styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--My Projects-->
     <section id="my-projects">
         <div class ="flex-row">
-        <h2 class ="section-title primary border">
+        <h2 class ="section-title primary-border">
             My Projects
         </h2>
         </div>
@@ -62,12 +62,12 @@
         <div class="projects">
         
         <article class="project">
-        <div class="project image project-1">
+        <div class="project-img project-1">
             <div>
                 <h3>Run Buddy</h3>
             </div>
         </div>
-            <div class="app-description">
+            <div class="project-description">
                 <p>
                     This is a website for training runner's.
                 </p>
@@ -77,64 +77,64 @@
     <!--Second Project-->
 
         <article class="project">
-            <div class="project image project-2">
+            <div class="project-img project-2">
                 <div>
                     <h3>Horeison</h3>
                 </div>
             </div>
-                <div class="app-description">
+                <div class="project-description">
                     <p>
                         A website to help with search engine optimization.
                     </p>
                 </div>
             </article>
-
+    <!--Third Project-->
             <article class="project">
-                <div class="project image project-3">
+                <div class="project-img project-3">
                     <div>
                         <h3>Plant Pocket Guide</h3>
                     </div>
                 </div>
-                    <div class="app-description">
+                    <div class="project-description">
                         <p>
                             An app that lets you take a photo of your plant and get an exact care guide specific to your plant.
                         </p>
                     </div>
             </article>
-
+    <!--Fourth Project-->
             <article class="project">
-                    <div class="project image project-4">
+                    <div class="project-img project-4">
                         <div>
                             <h3>WhatsCat</h3>
                         </div>
                     </div>
-                        <div class="app-description">
+                        <div class="project-description">
                             <p>
                                 A messenger app the let's you communicate with your cat.
                             </p>
                         </div>
             </article>
-
+    <!--Fifth Project-->
             <article class="project">
-                        <div class="project image project-5">
+                        <div class="project-img project-5">
                             <div>
                                 <h3>What if it Was Purple?</h3>
                             </div>
                         </div>
-                            <div class="app-description">
+                            <div class="project-description">
                                 <p>
                                     Have you ever looked at something and wondered what it would look like if it were purple? This is the perfect app for you.
                                 </p>
                             </div>
             </article>
-
+        <!--Sixth Project-->
             <article class="project">
-                <div class="project image project-6">
+                <div class="project-img project-6">
                     <div>
                         <h3>Flavors of Love</h3>
                     </div>
                 </div>
-                    <div class="app-description">
+                    <div class="project-description">
                         <p>
                             A website that pairs people for dates based on their favorite foods. Food lover's need love too.
                         </p>
@@ -144,11 +144,12 @@
           
 
     <!--Contact Me-->
-    <section id="contact-me">
-        <h3>Riley Beach</h3><br/>
-        <h4>Phone: 623.432.2126</h4><br/>
-        <h4>Email:<a href="mailto:rsbeach97@gmail.com">rsbeach97@gmail.com</a></h4>
-
+    <section id="contact-me" class="contact-info">
+        <div class="contact-me">
+            <h3>Riley Beach</h3>
+        </div>    
+            <h4>Phone: 623.432.2126</h4>
+            <h4>Email:<a href="mailto:rsbeach97@gmail.com">rsbeach97@gmail.com</a></h4>
     </section>
 
 </body>
