now this is the final commit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="my-bio">
             <div class="bio-img">
-            <img src="./assets/images/me.JPG">
+            <img src="./assets/images/me.JPG" alt="photo of me laying in grass">
             </div>
             <p>
                 Hi, my name is Riley Beach and I am a 23 year old web developer from Anthem, Arizona. I graduated with a bachelors's degree in Marketing at Arizona State university. In my free time I love learning new coding languages, playing video games, or napping with my cat.      
@@ -67,7 +67,9 @@
         <article class="project">
         <div class="project-img project-1">
             <div>
-                <h3>Run Buddy</h3>
+                <h3>
+    
+                    Run Buddy</h3>
             </div>
         </div>
             <div class="project-description">
