--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--My Projects-->
     <section id="my-projects">
-        <div class="title-container"=>
+        <div class="title-container">
         <h2 class="section-title primary-border">
             My Projects
         </h2>
