added covid peeper

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
             <article class="project">
                     <div class="project-img project-4">
                         <div>
-                            <h3>WhatsCat</h3>
+                            <h3>Covid Peeper</h3>
                         </div>
                     </div>
                         <div class="project-description">
                             <p>
-                                A messenger app the let's you communicate with your cat.
+                                A site that lets you search covid stats by country.
                             </p>
                         </div>
             </article>
